<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<!--Header width Page Indicator-->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        >
        <!--Actual Page Indicators-->
        <RadioGroup
            android:id="@+id/rbn_pages"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">


            <RadioButton
                android:id="@+id/rbn_page1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1"
                android:checked="true"
                android:padding="@dimen/gen_pad"
                />

            <RadioButton
                android:id="@+id/rbn_page2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="2"
                android:padding="@dimen/gen_pad"
                />

            <RadioButton
                android:id="@+id/rbn_page3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/gen_pad"
                android:text="3"
                />



        </RadioGroup>

    </LinearLayout>
    <!--Horizontal Line under header-->
    <LinearLayout
        android:id="@+id/l_line"
        android:layout_below="@+id/header"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="wrap_content">

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            />
    </LinearLayout>
    <!--Main Page Content Holder-->

<ScrollView
    android:id="@+id/main_holder"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/gen_pad"
    android:layout_below="@+id/l_line"
    >

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

      <LinearLayout
          android:id="@+id/comp_holder"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >
          <ImageView
              android:layout_width="50dp"
              android:layout_height="wrap_content"
              android:src="@drawable/ic_business_center_black_24dp"
              />
          <AutoCompleteTextView
              android:id="@+id/txt_comp_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/lbl_comp_name"
              android:inputType="textAutoComplete"
              android:textSize="@dimen/txt_xms"
              android:maxLines="2"
              />
      </LinearLayout>

      <LinearLayout
          android:id="@+id/phone_holder"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          >
          <ImageView
              android:layout_width="50dp"
              android:layout_height="wrap_content"
              android:src="@drawable/ic_phone_black_24dp"
              />
          <AutoCompleteTextView
              android:id="@+id/txt_phone"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:inputType="phone"
              android:hint="@string/lbl_phone"
              android:textSize="@dimen/txt_xms"
              />
      </LinearLayout>


      <RadioGroup

          android:id="@+id/rbn_sign_type"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="@dimen/txt_ms"
          android:orientation="vertical">

          <RadioButton
              android:id="@+id/rbn_signage"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/txt_xms"
              android:text="@string/lbl_signage"
              />
          <RadioButton
              android:id="@+id/rbn_billboard"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/txt_xms"
              android:text="@string/lbl_billboard"
              />
          <RadioButton
              android:id="@+id/rbn_poster"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/txt_xms"
              android:text="@string/lbl_poster"
              />
          <RadioButton
              android:id="@+id/rbn_other"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textSize="@dimen/txt_xms"
              android:text="@string/lbl_other"
              />


      </RadioGroup>

  </LinearLayout>


</ScrollView>


    <!--Footer-->
<LinearLayout
    android:id="@+id/footer"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:divider="@drawable/amsk_divider"
    android:background="@color/colorWhite"
    android:layout_alignParentBottom="true"
    >

    <Button
        android:id="@+id/btn_previous"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:background="@color/colorWhite"
        android:text="@string/lbl_prev"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="150dip"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:background="@color/colorWhite"
        android:text="@string/lbl_next"/>
</LinearLayout>

</RelativeLayout>
